[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/uiScenes/changeSceneButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://uiThemes/uncannyTheme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/uiScripts/pauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/pauseMenu/playButtonNormal.png" type="Texture" id=4]
[ext_resource path="res://shaders/blurPauseMenuShader.gdshader" type="Shader" id=5]
[ext_resource path="res://assets/ui/pauseMenu/pauseTitle.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/pauseMenu/playButtonHover.png" type="Texture" id=7]
[ext_resource path="res://assets/sounds/sfx/uiSfx/uiHoverButtons.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sounds/sfx/uiSfx/uiButton2.mp3" type="AudioStream" id=9]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 5 )
shader_param/blurFactor = 3.097

[node name="pauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -628, -159 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="grayOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.345098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blurShader" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.0627451, 0.0627451, 0.819608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = 147.0
margin_right = 206.0
margin_bottom = 302.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButtonTopRx" type="TextureButton" parent="."]
margin_left = 1812.0
margin_top = 25.0
margin_right = 1885.0
margin_bottom = 102.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 7 )

[node name="hoverBtnSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "ui"

[node name="clickBtnSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "ui"

[node name="buttonsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = -155.0
margin_right = 205.5
margin_bottom = 155.0

[node name="resumeButton" type="Button" parent="buttonsContainer"]
margin_right = 411.0
margin_bottom = 73.0
focus_mode = 0
enabled_focus_mode = 0
text = "Resume"

[node name="restartLevelButton" parent="buttonsContainer" instance=ExtResource( 1 )]
margin_top = 79.0
margin_right = 411.0
margin_bottom = 152.0
focus_mode = 0
enabled_focus_mode = 0
text = "Restart"
nextScenePath = "res://scenes/level1.tscn"

[node name="settingsButton" type="Button" parent="buttonsContainer"]
margin_top = 158.0
margin_right = 411.0
margin_bottom = 231.0
text = "Settings"

[node name="toMainMenuButton" parent="buttonsContainer" instance=ExtResource( 1 )]
margin_top = 237.0
margin_right = 411.0
margin_bottom = 310.0
focus_mode = 0
enabled_focus_mode = 0
text = "Main Menu"
nextScenePath = "res://scenes/uiScenes/menuScenes/mainMenu.tscn"

[connection signal="button_up" from="pauseButtonTopRx" to="." method="_on_pauseButtonTopRx_button_up"]
[connection signal="mouse_entered" from="pauseButtonTopRx" to="." method="_on_pauseButtonTopRx_mouse_entered"]
[connection signal="button_up" from="buttonsContainer/resumeButton" to="." method="_on_button_up"]
[connection signal="mouse_entered" from="buttonsContainer/resumeButton" to="." method="_on_resumeButton_mouse_entered"]
[connection signal="mouse_entered" from="buttonsContainer/settingsButton" to="." method="_on_settingsButton_mouse_entered"]
